--- a/mockapi/index.html
+++ b/mockapi/index.html
@@ -1,4 +1,8 @@
-<a href="https://ewinsutriandi.github.io/mockapi/operating_system.json">Operating System</a>
-<a href="https://ewinsutriandi.github.io/mockapi/bahasa_pemrograman.json">Bahasa Pemrograman</a>
-<a href="https://ewinsutriandi.github.io/mockapi/algoritma_pengurutan.json">Algoritma Pengurutan</a>
-<a href="https://ewinsutriandi.github.io/mockapi/web_framework.json">Web Framework</a>
+<html>
+  <ol>
+    <li><a href="https://ewinsutriandi.github.io/mockapi/operating_system.json">Operating System</a></li>
+    <li><a href="https://ewinsutriandi.github.io/mockapi/bahasa_pemrograman.json">Bahasa Pemrograman</a></li>
+    <li><a href="https://ewinsutriandi.github.io/mockapi/algoritma_pengurutan.json">Algoritma Pengurutan</a></li>
+    <li><a href="https://ewinsutriandi.github.io/mockapi/web_framework.json">Web Framework</a></li>
+  </ol>
+</html>
