--- a/mockapi/index.html
+++ b/mockapi/index.html
@@ -1,4 +1,5 @@
 <html>
+  <h3>Index</h3>
   <ol>
     <li><a href="https://ewinsutriandi.github.io/mockapi/operating_system.json">Operating System</a></li>
     <li><a href="https://ewinsutriandi.github.io/mockapi/bahasa_pemrograman.json">Bahasa Pemrograman</a></li>
