--- a/mockapi/index.html
+++ b/mockapi/index.html
@@ -1,9 +1,19 @@
 <html>
+  <center>
   <h3>Index</h3>
   <ol>
-    <li><a href="https://ewinsutriandi.github.io/mockapi/operating_system.json">Operating System</a></li>
-    <li><a href="https://ewinsutriandi.github.io/mockapi/bahasa_pemrograman.json">Bahasa Pemrograman</a></li>
-    <li><a href="https://ewinsutriandi.github.io/mockapi/algoritma_pengurutan.json">Algoritma Pengurutan</a></li>
-    <li><a href="https://ewinsutriandi.github.io/mockapi/web_framework.json">Web Framework</a></li>
+    <li><a href="https://ewinsutriandi.github.io/mockapi/operating_system.json">
+      Operating System</a>, daftar berisi beberapa jenis sistem operasi
+    </li>
+    <li><a href="https://ewinsutriandi.github.io/mockapi/bahasa_pemrograman.json">
+      Bahasa Pemrograman</a>, daftar berisi beberapa bahasa pemrograman populer
+    </li>
+    <li><a href="https://ewinsutriandi.github.io/mockapi/algoritma_pengurutan.json">
+      Algoritma Pengurutan</a>, daftar berisi beberapa contoh algoritma untuk mengurutkan (sorting)
+    </li>
+    <li><a href="https://ewinsutriandi.github.io/mockapi/web_framework.json">
+      Web Framework</a>, daftar beberapa framework web development yang populer
+    </li>
   </ol>
+</center>
 </html>
